top banner updated, components id updated

--- a/android/app/src/main/res/layout/fragment_contact_info.xml
+++ b/android/app/src/main/res/layout/fragment_contact_info.xml
@@ -5,19 +5,17 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     tools:context=".view.ContactInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
@@ -29,6 +27,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
@@ -203,9 +202,8 @@
                         android:textStyle="normal" />
                 </LinearLayout>
 
-
                 <Button
-                    android:id="@+id/btnConInfo"
+                    android:id="@+id/updateContact"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
@@ -213,8 +211,7 @@
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
-                    android:onClick="contactSave"
-                    android:text="Kaydet"
+                    android:text="Güncelle"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:textStyle="bold"
@@ -225,7 +222,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="OnClick"
                     tools:layout_editor_absoluteY="368dp" />
-
 
             </LinearLayout>
 
