top banner updated

--- a/android/app/src/main/res/layout/fragment_academic_info.xml
+++ b/android/app/src/main/res/layout/fragment_academic_info.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     tools:context=".view.AcademicInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         app:cardBackgroundColor="#1a9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -29,6 +28,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
@@ -95,7 +95,7 @@
                     android:textStyle="normal" />
 
                 <Button
-                    android:id="@+id/btnAcademicInfo"
+                    android:id="@+id/btnUpdateAcademicInfo"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
@@ -103,7 +103,7 @@
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
-                    android:text="Kaydet"
+                    android:text="Güncelle"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:textStyle="bold"
