--- a/android/app/src/main/res/layout/fragment_consultancy_fields.xml
+++ b/android/app/src/main/res/layout/fragment_consultancy_fields.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     tools:context=".view.ConsultancyFieldsFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -29,6 +28,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24"
             tools:ignore="OnClick" />
 
