--- a/android/app/src/main/res/layout/fragment_profession_info.xml
+++ b/android/app/src/main/res/layout/fragment_profession_info.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
     tools:context=".view.ProfessionInfoFragment">
 
     <!--Header-->
@@ -21,7 +20,7 @@
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp"
         android:layout_width="match_parent"
-        android:layout_height="55dp">
+        android:layout_height="70dp">
 
         <ImageView
             android:id="@+id/goToBack"
@@ -29,7 +28,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"/>
 
         <TextView
             android:layout_width="match_parent"
