--- a/android/app/src/main/res/layout/fragment_academic_info.xml
+++ b/android/app/src/main/res/layout/fragment_academic_info.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.AcademicInfoFragment">
+    tools:context=".view.view.AcademicInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView3"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardBackgroundColor="#1a9AAF"
@@ -28,14 +28,14 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Akademik Geçmiş"
             android:textColor="#FFFFFF"
@@ -52,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView3">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -70,13 +70,14 @@
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="275dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="7dp"
+                    android:layout_marginStart="7dp"
                     android:text="Akademik Geçmiş"
                     android:textColor="#000000"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     tools:layout_editor_absoluteX="36dp"
                     tools:layout_editor_absoluteY="159dp" />
@@ -84,7 +85,7 @@
                 <EditText
                     android:id="@+id/academicEditText"
                     android:layout_width="350dp"
-                    android:layout_height="320dp"
+                    android:layout_height="300dp"
                     android:layout_gravity="center"
                     android:background="@drawable/edittext_bg"
                     android:ems="15"
@@ -115,7 +116,6 @@
                     tools:layout_editor_absoluteY="368dp" />
             </LinearLayout>
         </LinearLayout>
-
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
