--- a/android/app/src/main/res/layout/fragment_contact_info.xml
+++ b/android/app/src/main/res/layout/fragment_contact_info.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.ContactInfoFragment">
+    tools:context=".view.view.ContactInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
@@ -27,14 +27,14 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="İletişim Bilgileri"
             android:textColor="#FFFFFF"
@@ -76,13 +76,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/materialCardView2">
 
                 <TextView
-                    android:id="@+id/textView2"
                     android:layout_width="275dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginStart="5dp"
                     android:text="İletişim"
                     android:textColor="#000000"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     tools:layout_editor_absoluteX="36dp"
                     tools:layout_editor_absoluteY="159dp" />
@@ -224,9 +223,7 @@
                     tools:layout_editor_absoluteY="368dp" />
 
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
