--- a/android/app/src/main/res/layout/fragment_firm_info.xml
+++ b/android/app/src/main/res/layout/fragment_firm_info.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.FirmInfoFragment">
+    tools:context=".view.view.FirmInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView4"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardBackgroundColor="#1a9AAF"
@@ -28,15 +28,14 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:onClick="goToBack"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Firma Bilgisi Ve Çalışma Alanı"
             android:textColor="#FFFFFF"
@@ -53,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView4">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -113,7 +112,7 @@
                     tools:layout_editor_absoluteY="211dp" />
 
                 <Button
-                    android:id="@+id/btnAdd"
+                    android:id="@+id/addFirmInfo"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
@@ -121,7 +120,6 @@
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
-                    android:onClick="contactSave"
                     android:text="Ekle"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
@@ -131,16 +129,15 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="OnClick"
                     tools:layout_editor_absoluteY="368dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="7dp"
+                    android:layout_marginVertical="10dp"
                     android:text="Firma Bilgilerim"
                     android:textColor="#000000"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp" />
 
                 <LinearLayout
                     android:id="@+id/firmContainer"
