--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".view.MainActivity">
+    android:background="#FFFFFF"
+    tools:context=".view.view.MainActivity">
 
     <!-- TOP BANNER -->
     <LinearLayout
@@ -17,24 +16,23 @@
         android:background="@drawable/card_background"
         android:orientation="horizontal"
         android:padding="16dp"
-        android:paddingTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <ImageView
-            android:layout_width="65dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/rounded_img"
             app:srcCompat="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -42,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="USİ"
                 android:textColor="#FFFFFF"
-                android:textSize="27sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -50,20 +48,18 @@
                 android:layout_height="wrap_content"
                 android:text="Üniversite-Sanayi İşbirliği"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
         </LinearLayout>
-
     </LinearLayout>
 
 
-    <!--MAIN-->
+    <!-- MAIN -->
     <LinearLayout
-        android:layout_width="319dp"
-        android:layout_height="451dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="70dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="100dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
@@ -75,12 +71,6 @@
             android:id="@+id/logoTto"
             android:layout_width="320dp"
             android:layout_height="230dp"
-            android:layout_marginTop="70dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnIndustry"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/topBanner"
             app:srcCompat="@drawable/tto" />
 
         <Button
@@ -96,11 +86,6 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:cornerRadius="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnAcademician"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logoTto"
             app:strokeColor="#FFFFFF"
             app:strokeWidth="2dp"
             tools:ignore="OnClick" />
@@ -109,7 +94,6 @@
             android:id="@+id/btnAcademician"
             android:layout_width="320dp"
             android:layout_height="55dp"
-            android:layout_marginBottom="94dp"
             android:backgroundTint="#F06E1B"
             android:elevation="30dp"
             android:fontFamily="monospace"
@@ -119,60 +103,66 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:cornerRadius="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/bottomLogos"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnIndustry"
             app:strokeColor="#FFFFFF"
             app:strokeWidth="2dp"
             tools:ignore="OnClick" />
-
     </LinearLayout>
 
 
-    <!--FOOTER-->
+    <!-- FOOTER -->
     <LinearLayout
         android:id="@+id/bottomLogos"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@drawable/card_background"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/logo" />
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/valilik" />
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/kosgeb" />
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/stb" />
-
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
