--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:fitsSystemWindows="true"
-    tools:context=".view.SignUpActivity">
+    tools:context=".view.view.SignUpActivity">
 
     <!-- TOP BANNER -->
     <LinearLayout
@@ -17,24 +16,23 @@
         android:background="@drawable/card_background"
         android:orientation="horizontal"
         android:padding="16dp"
-        android:paddingTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
         <ImageView
-            android:layout_width="65dp"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/rounded_img"
             app:srcCompat="@drawable/logo" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="7dp"
             android:orientation="vertical">
 
             <TextView
@@ -42,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text="USİ"
                 android:textColor="#FFFFFF"
-                android:textSize="27sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -50,9 +48,8 @@
                 android:layout_height="wrap_content"
                 android:text="Üniversite-Sanayi İşbirliği"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
         </LinearLayout>
-
     </LinearLayout>
 
 
@@ -214,48 +211,59 @@
     </LinearLayout>
 
 
-    <!-- FOOTER-->
+    <!--FOOTER-->
     <LinearLayout
         android:id="@+id/bottomLogos"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@drawable/card_background"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:padding="16dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/logo" />
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/valilik" />
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/kosgeb" />
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginBottom="23dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_img"
             android:clipToOutline="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/stb" />
-
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
