--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEEF5"
-    tools:context=".view.AcademicianActivity">
+    tools:context=".view.view.AcademicianActivity">
 
 
     <FrameLayout
@@ -20,7 +20,6 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
@@ -34,7 +33,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="80dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:paddingBottom="8dp">
@@ -42,7 +41,7 @@
                 <!-- Header -->
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="70dp"
                     app:cardBackgroundColor="#1A9AAF"
                     app:cardCornerRadius="0dp"
                     app:cardElevation="8dp"
@@ -57,17 +56,12 @@
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp">
 
-                        <ImageView
-                            android:id="@+id/btnBack"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:contentDescription="Geri"
-                            android:onClick="goToBack"
-                            android:src="@drawable/baseline_arrow_back_ios_24" />
-
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="13dp"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="Hesabım"
@@ -108,8 +102,8 @@
 
                             <ImageView
                                 android:id="@+id/imgUser"
-                                android:layout_width="125dp"
-                                android:layout_height="125dp"
+                                android:layout_width="126dp"
+                                android:layout_height="126dp"
                                 android:layout_gravity="center"
                                 android:background="@drawable/rounded_img"
                                 android:clipToOutline="true"
@@ -119,8 +113,8 @@
 
                             <ImageView
                                 android:id="@+id/image2"
-                                android:layout_width="36dp"
-                                android:layout_height="36dp"
+                                android:layout_width="35dp"
+                                android:layout_height="35dp"
                                 android:layout_gravity="bottom|end"
                                 android:layout_marginEnd="14dp"
                                 android:layout_marginBottom="7dp"
@@ -132,7 +126,7 @@
                             android:id="@+id/txtDegree"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_marginTop="3dp"
                             android:text="Doktor Öğretim Üyesi"
                             android:textColor="#000000"
                             android:textSize="21sp"
@@ -667,10 +661,10 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="40dp"
-                    android:text="Çıkış Yap"
-                    android:textSize="18sp"
                     android:onClick="signOut"
-                    android:textColor="#2196F3"/>
+                    android:text="Çıkış Yap"
+                    android:textColor="#2196F3"
+                    android:textSize="18sp" />
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
@@ -680,11 +674,11 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:layout_gravity="bottom"
+        android:background="#FFFFFF"
         app:itemIconSize="22dp"
         app:itemIconTint="#1A9AAF"
         app:itemTextColor="#1A9AAF"
-        android:layout_gravity="bottom"
-        android:background="#FFFFFF"
         app:menu="@menu/bottom_nav_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
