--- a/android/app/src/main/res/layout/fragment_education.xml
+++ b/android/app/src/main/res/layout/fragment_education.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.EducationFragment">
+    tools:context=".view.view.EducationFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView8"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
@@ -28,14 +28,14 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Verebileceği Eğitimler"
             android:textColor="#FFFFFF"
@@ -52,7 +52,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView8">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,7 +85,7 @@
                     android:layout_marginEnd="169dp"
                     android:text="Verebileceğiniz Eğitimleri Giriniz"
                     android:textColor="#000000"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,23 +108,23 @@
                 <EditText
                     android:id="@+id/educationOfArea"
                     android:layout_width="360dp"
-                    android:layout_height="100dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
                     android:background="@drawable/edittext_bg"
+                    android:gravity="start|top"
+                    android:inputType="textMultiLine"
                     android:padding="12dp"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    android:textStyle="normal"
-                    android:inputType="textMultiLine"
-                    android:gravity="start|top" />
+                    android:textStyle="normal" />
 
                 <Button
-                    android:id="@+id/btnAddEducationInfo"
+                    android:id="@+id/addEducationInfo"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="20dp"
+                    android:layout_marginVertical="10dp"
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
@@ -146,17 +146,26 @@
                     android:layout_marginStart="15dp"
                     android:text="Verilen Eğitimler"
                     android:textColor="#000000"
-                    android:textSize="17sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
-                    android:id="@+id/educationInfoContainer"
+                    android:id="@+id/educationContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/txtNoEducation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="📭 Henüz hiç verebileceği eğitim bilgisi eklenmemiş"
+                        android:textColor="#626161"
+                        android:textSize="15sp" />
 
+                </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
