--- a/android/app/src/main/res/layout/fragment_previous_consultancies.xml
+++ b/android/app/src/main/res/layout/fragment_previous_consultancies.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.PreviousConsultanciesFragment">
+    tools:context=".view.view.PreviousConsultanciesFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView7"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
@@ -28,15 +28,14 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
-            tools:ignore="OnClick" />
+            android:layout_marginTop="13dp"
+            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Daha Önceki Danışmanlıklar"
             android:textColor="#FFFFFF"
@@ -54,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView7">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,7 +86,7 @@
                     android:layout_marginEnd="169dp"
                     android:text="Daha Önceki Danışmanlıklar"
                     android:textColor="#000000"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -109,9 +108,9 @@
 
 
                 <EditText
-                    android:id="@+id/previousConsultancyOfArea"
+                    android:id="@+id/prevConsultancyOfArea"
                     android:layout_width="360dp"
-                    android:layout_height="100dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
                     android:background="@drawable/edittext_bg"
@@ -123,7 +122,7 @@
 
 
                 <Button
-                    android:id="@+id/btnAddPreviousConsultancyInfo"
+                    android:id="@+id/addPrevConsultancyInfo"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
@@ -151,15 +150,25 @@
                     android:layout_marginStart="15dp"
                     android:text="Daha Önceki Danışmanlıklar"
                     android:textColor="#000000"
-                    android:textSize="17sp" />
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
                 <LinearLayout
-                    android:id="@+id/consultancyInfoContainer"
+                    android:id="@+id/prevConsultancyContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/txtNoConsultancy"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="📭 Henüz hiç daha önceki danışmanlık bilgisi eklenmemiş"
+                        android:textColor="#626161"
+                        android:textSize="15sp" />
 
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
