--- a/android/app/src/main/res/layout/fragment_previous_educations.xml
+++ b/android/app/src/main/res/layout/fragment_previous_educations.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.PreviousEducationsFragment">
+    tools:context=".view.view.PreviousEducationsFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView9"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
@@ -28,15 +28,15 @@
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/baseline_arrow_back_ios_24"
             tools:ignore="OnClick" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Daha Önce Verdiği Eğitimler"
             android:textColor="#FFFFFF"
@@ -53,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2">
+        app:layout_constraintTop_toBottomOf="@id/materialCardView9">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,7 +86,7 @@
                     android:layout_marginEnd="169dp"
                     android:text="Daha Önce Verdiğiniz Eğitimleri Giriniz"
                     android:textColor="#000000"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
                 <EditText
                     android:id="@+id/prevEducationOfArea"
                     android:layout_width="360dp"
-                    android:layout_height="100dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
                     android:background="@drawable/edittext_bg"
@@ -150,23 +150,27 @@
                     android:layout_marginStart="15dp"
                     android:text="Daha Önce Verilen Eğitimler"
                     android:textColor="#000000"
-                    android:textSize="17sp"/>
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
                 <LinearLayout
                     android:id="@+id/prevEducationContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/txtNoEducation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:text="📭 Henüz hiç daha önce verilen eğitimler eklenmemiş"
+                        android:textColor="#626161"
+                        android:textSize="15sp" />
 
+                </LinearLayout>
             </LinearLayout>
-
-
-
-
-
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
