--- a/android/app/src/main/res/layout/fragment_profession_info.xml
+++ b/android/app/src/main/res/layout/fragment_profession_info.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
-    tools:context=".view.ProfessionInfoFragment">
+    tools:context=".view.view.ProfessionInfoFragment">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/materialCardView5"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -18,24 +20,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
-        app:strokeWidth="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
+        app:strokeWidth="0dp">
 
         <ImageView
             android:id="@+id/goToBack"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="13dp"
+            app:srcCompat="@drawable/baseline_arrow_back_ios_24"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Uzmanlık Alanları"
             android:textColor="#FFFFFF"
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView2"
+        app:layout_constraintTop_toBottomOf="@id/materialCardView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true">
@@ -88,7 +88,7 @@
                     android:layout_marginEnd="169dp"
                     android:text="Uzmanlık Alanlarınızı Giriniz"
                     android:textColor="#000000"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -106,14 +106,14 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/professionOfArea"
+                    android:id="@+id/professionText"
                     android:layout_width="360dp"
-                    android:layout_height="100dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="10dp"
                     android:background="@drawable/edittext_bg"
                     android:gravity="start|top"
-                    android:inputType="textMultiLine"
+                    android:inputType="text"
                     android:padding="12dp"
                     android:textColor="#000000"
                     android:textSize="16sp"
@@ -121,11 +121,7 @@
 
 
                 <Button
-                    android:id="@+id/btnAddProfessionInfo"
-                    app:cornerRadius="10dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/addInfo"
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
@@ -133,14 +129,16 @@
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
-                    android:onClick="professionSave"
                     android:text="Ekle"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:translationZ="4dp"
-                    tools:ignore="OnClick"
-                    tools:layout_editor_absoluteY="368dp" />
+                    tools:layout_editor_absoluteY="368dp"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -149,20 +147,27 @@
                     android:layout_marginStart="15dp"
                     android:text="Uzmanlık Alanları"
                     android:textColor="#000000"
-                    android:textSize="17sp" />
+                    android:textStyle="bold"
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:id="@+id/professionInfoContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/txtNoProfession"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:textSize="15sp"
+                        android:textColor="#626161"
+                        android:text="📭 Henüz hiç uzmanlık alanı eklenmemiş"/>
 
+                </LinearLayout>
             </LinearLayout>
-
-
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
