--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/preview"
-        android:enabled="true"
-        android:iconTint="#999999"
+        android:id="@+id/previewFragment"
         android:icon="@drawable/baseline_home_24"/>
     <item
-        android:id="@+id/profile"
-        android:enabled="true"
-        android:iconTint="#999999"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/baseline_person_24"/>
 </menu>
