The academicianView folder was created and the fragments and activities related to the academician were moved to the folder

--- a/android/app/src/main/res/layout/activity_academic_info.xml
+++ b/android/app/src/main/res/layout/activity_academic_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEEF5"
-    tools:context=".view.view.AcademicInfoActivity">
+    tools:context=".view.academicianView.AcademicInfoActivity">
 
 
     <!--Header-->
