--- a/android/app/src/main/res/layout/activity_academician_main.xml
+++ b/android/app/src/main/res/layout/activity_academician_main.xml
@@ -7,7 +7,7 @@
     android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.view.AcademicianMainActivity">
+    tools:context=".view.academicianView.AcademicianMainActivity">
 
     <!-- NAV HOST FRAGMENT: BottomNavigationView yukarıda kalacak -->
     <fragment
