--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -6,7 +6,7 @@
     android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.view.FirmInfoActivity">
+    tools:context=".view.academicianView.FirmInfoActivity">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
