--- a/android/app/src/main/res/layout/activity_previous_consultancies.xml
+++ b/android/app/src/main/res/layout/activity_previous_consultancies.xml
@@ -6,7 +6,7 @@
     android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.view.PreviousConsultanciesActivity">
+    tools:context=".view.academicianView.PreviousConsultanciesActivity">
 
 
     <!--Header-->
