--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.view.SignUpActivity">
+    tools:context=".view.academicianView.SignUpActivity">
 
     <!-- TOP BANNER -->
     <LinearLayout
