--- a/android/app/src/main/res/layout/activity_verification.xml
+++ b/android/app/src/main/res/layout/activity_verification.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.view.VerificationActivity">
+    tools:context=".view.academicianView.VerificationActivity">
 
     <!-- TOP BANNER -->
     <LinearLayout
