--- a/android/app/src/main/res/navigation/nav_graph_industry.xml
+++ b/android/app/src/main/res/navigation/nav_graph_industry.xml
@@ -7,12 +7,12 @@
 
     <fragment
         android:id="@+id/profileIndustryFragment"
-        android:name="com.example.usiapp.view.view.ProfileIndustryFragment"
+        android:name="com.example.usiapp.view.industryView.ProfileIndustryFragment"
         android:label="fragment_profile_industry"
         tools:layout="@layout/fragment_profile_industry" />
     <fragment
         android:id="@+id/requestIndustryFragment"
-        android:name="com.example.usiapp.view.view.RequestIndustryFragment"
+        android:name="com.example.usiapp.view.industryView.RequestIndustryFragment"
         android:label="fragment_request_industry"
         tools:layout="@layout/fragment_request_industry" />
 
